<resources>
    <string name="app_name">TwitterProject</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_new_tweet">NewTweet</string>


    <!-- Inscription strings -->
    <string name="inscr_next">Next</string>
    <string name="inscr_password">Password</string>
    <string name="inscr_password2">Type the password again</string>
    <string name="inscr_nickname">Nickname</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="nickname">Nickname</string>
    <string name="terms">Terms of use</string>
    <string name="termsAgreement">I agree to terms</string>
    <string name="termsText">1. Who May Use the Services
You may use the Services only if you agree to form a binding contract with Twitter and are not a person barred from receiving services under the laws of the applicable jurisdiction. In any case, you must be at least 13 years old, or in the case of Periscope 16 years old, to use the Services. If you are accepting these Terms and using the Services on behalf of a company, organization, government, or other legal entity, you represent and warrant that you are authorized to do so and have the authority to bind such entity to these Terms, in which case the words “you” and “your” as used in these Terms shall refer to such entity.
2. Privacy
Our Privacy Policy (https://www.twitter.com/privacy) describes how we handle the information you provide to us when you use our Services. You understand that through your use of the Services you consent to the collection and use (as set forth in the Privacy Policy) of this information, including the transfer of this information to the United States, Ireland, and/or other countries for storage, processing and use by Twitter and its affiliates.
3. Content on the Services
You are responsible for your use of the Services and for any Content you provide, including compliance with applicable laws, rules, and regulations. You should only provide Content that you are comfortable sharing with others.
Any use or reliance on any Content or materials posted via the Services or obtained by you through the Services is at your own risk. We do not endorse, support, represent or guarantee the completeness, truthfulness, accuracy, or reliability of any Content or communications posted via the Services or endorse any opinions expressed via the Services. You understand that by using the Services, you may be exposed to Content that might be offensive, harmful, inaccurate or otherwise inappropriate, or in some cases, postings that have been mislabeled or are otherwise deceptive. All Content is the sole responsibility of the person who originated such Content. We may not monitor or control the Content posted via the Services and, we cannot take responsibility for such Content. We reserve the right to remove Content that violates the User Agreement, including for example, copyright or trademark violations, impersonation, unlawful conduct, or harassment. Information regarding specific policies and the process for reporting or appealing violations can be found in our Help Center (https://support.twitter.com/articles/15789#specific-violations and https://support.twitter.com/articles/15790).</string>


    <!-- Errors strings -->
    <string name="invalid_email_syntax">Invalid Email syntax or Email already in use</string>
    <string name="invalid_passwd_match">Passwords do not match</string>
    <string name="invalid_passwd_length">Passwords must have at least 6 characters</string>
    <string name="invalid_nickname">Nickname already in use</string>
    <string name="valid_info">Valid information</string>
    
    
    <!-- Extra Intent String -->
    <string name="Int_nickname">nickname</string>
    <string name="Int_tweet">tweet</string>
    <string name="Int_hashtags">hashtags</string>
    <string name="Int_idTweet">idTweet</string>
    <string name="info_email">test</string>

    <!-- SharedPrefName -->
    <string name="sharedPref">sharedPreferences_Name</string>

    <!-- Tweet Strings -->
    <string name="italic_ClickToModify"><i>(Click here to edit)</i></string>

</resources>
